Archive2/51/3656f8d095f9fb/output
+ g++-4.8 -std=c++11 -Wall -Wextra -pedantic -Wno-unused-variable main.cpp
In file included from main.cpp:4:0:
main.cpp: In instantiation of 'T bar(int) [with T = std::basic_string<char>]':
main.cpp:18:24:   required from here
main.cpp:10:3: error: static assertion failed: T cannot be std::string
   BOOST_STATIC_ASSERT_MSG(!boost::is_same<T, std::string>::value, 
   ^
